examples/errors/unevaluated.ign
<program>
  {print(aaa + 2)}  
  <var name=aaa type=int>
    {3}
  </var>
</program>